<resources>
    <string name="app_name">KPPN</string>
    <string name="title_home">Beranda</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifikasi Umum</string>
    <string name="title_notifications_stake">Notifikasi Stake</string>
    <string name="title_web_view">Web KPPN</string>
    <string name="title_profile">Profil</string>
    <string name="sign_in">Masuk</string>
    <string name="logout">Keluar</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="skip">Lewati langkah ini</string>
    <string name="sikapus">SIKAPKU</string>
    <string name="kppn_pekanbaru">Kantor Pelayanan Pembendaharaan Negara Kota Pekanbaru</string>
    <string name="id_stake">ID Stakeholder</string>
    <string name="kode_stake">Kode Stakeholder</string>
    <string name="nama_stake">Nama Stakeholder</string>
    <string name="email_stake">Email Stakeholder</string>
    <string name="placeholder_judul">Placeholder Judul Artikel</string>
    <string name="placeholder_tanggal">Placeholder Tanggal</string>
    <string name="placeholder_isi">Placeholder Isi Berita</string>
    <string name="title_activity_berita">BeritaActivity</string>
    <string name="placeholder_judul_notif">Placeholder judul notif</string>
    <string name="placeholder_isi_notif">Placeholder isi notif</string>
    <string name="placeholder_tanggal_notif">Placeholder tanggal notif</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="bendahara">Pejabat Perbendaharaan</string>
    <string name="bendahara_nama">Nama Bendahara</string>
    <string name="bendahara_jabatan">Jabatan Perbendaharaan</string>
    <string name="bendahara_alamat">Alamatnya bendahara</string>
    <string name="bendahara_no_hp">080989999</string>
    <string name="bendahara_stakeholder">Kerajaan Antariksa</string>
    <string-array name="jabatanList">
        <item>KPA</item>
        <item>PPK</item>
        <item>PPSPM</item>
        <item>Bendahara</item>
    </string-array>

</resources>
