<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".activities.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </LinearLayout>
    <ImageView
        android:id="@+id/login_title"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_marginTop="22dp"
        android:gravity="center_horizontal"
        android:src="@mipmap/logo"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sikapus"
        android:layout_below="@+id/login_title"
        android:text="@string/sikapus"
        android:textColor="@color/primary_light"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sikapus"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:background="#fff"
        android:elevation="@dimen/cardview_default_elevation"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/user"
                    android:drawableTint="@color/accent"
                    android:singleLine="true"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleContentDescription="show"
                app:passwordToggleDrawable="@drawable/toggle_pass"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/accent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:singleLine="true"
                    android:drawableStart="@drawable/lock"
                    android:drawableTint="@color/accent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:background="@color/accent"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:layout_gravity="center"
                android:textColor="@color/primary_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:id="@+id/skip"/>
        </LinearLayout>
    </RelativeLayout>



</RelativeLayout>
